fix arrow issue on small devices

--- a/src/scss/3-elements/_mouse.scss
+++ b/src/scss/3-elements/_mouse.scss
@@ -5,7 +5,7 @@
     border-radius: 50%;
     border: 2px solid #fff;
     position: absolute;
-    bottom: 50px;
+    bottom: 10px;
     left: 50%;
     margin-left: -20px;
     display: flex;
