--- a/src/scss/5-pages/_home.scss
+++ b/src/scss/5-pages/_home.scss
@@ -1,5 +1,7 @@
 .home{
     min-height: 100vh;
+    padding: 5rem 0;
+    position: relative;
     background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)),
     url('/src/images/home.jpg');
     @include bgImg();
